--- a/css/custom.css
+++ b/css/custom.css
@@ -59,6 +59,7 @@ a {
   padding: 12px 6px;
   color: var(--black-color);
   cursor: pointer;
+  border-radius: 100px;
 }
 
 img {
@@ -106,18 +107,30 @@ ul {
 }
 
 .slick-dots {
-  bottom: -50px;
+  bottom: 15px;
 }
 
 .slick-dotted.slick-slider {
-  margin-bottom: 70px;
+  margin-bottom: 0;
 }
+
+.slick-dots li button:before {
+  color: #ffffff;
+}
+
+.slick-dots li.slick-active button:before {
+  opacity: 0.75;
+  color: #ffffff;
+}
+
+/*  */
 
 .main_heading {
   font-size: 48px;
   font-weight: 600;
   color: var(--black-100-color);
   line-height: normal;
+  text-transform: capitalize;
 }
 
 .main_para {
@@ -261,7 +274,7 @@ nav.navbar {
 
 .hero_content {
   position: relative;
-  height: 800px;
+  height: 900px;
   overflow: hidden;
 }
 
@@ -334,10 +347,6 @@ nav.navbar {
 
 /* furniture */
 
-.furniture_icon {
-  padding-bottom: 50px;
-}
-
 .furniture_wrap {
   width: 50px;
   overflow: hidden;
@@ -359,15 +368,30 @@ nav.navbar {
   border-left: 1px solid #d9d9d9;
 }
 
-.furniture_wrap img {
-  filter: opacity(0.4);
-  transition: all 0.5s ease;
+.furniture_content {
+  text-align: center;
 }
 
-.furniture_icon ul li:hover img {
-  filter: opacity(1);
+.furniture_content span {
+  font-size: 14px;
+  font-weight: 600;
+  margin-top: 15px;
+  display: inline-block;
+  text-transform: capitalize;
 }
 
+/*  */
+
+/* trending  */
+
+.trendingProduct_list {
+  justify-content: center;
+}
+
+.trendingProduct_items {
+  flex: 0 0 calc(33.3% - 13px);
+  max-width: calc(33.3% - 13px);
+}
 /*  */
 
 /* Feature */
@@ -418,7 +442,7 @@ nav.navbar {
 }
 
 .feature_content {
-  background-image: url(../Images/collection.jpg);
+  background-image: url(../images/01.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -472,23 +496,6 @@ nav.navbar {
   padding-bottom: 0px;
 }
 
-.products_list {
-  padding-block: 0;
-}
-
-.product_innerContent {
-  padding-block: 10px;
-  text-align: left;
-}
-
-.product_wrapper {
-  line-height: 0;
-  position: relative;
-  height: auto;
-  overflow: hidden;
-  border-radius: 10px;
-}
-
 .discount_badge {
   color: var(--white-color);
   position: absolute;
@@ -500,43 +507,6 @@ nav.navbar {
   border-radius: 50px;
   font-size: 12px;
   font-weight: 500;
-}
-
-.product_wrapper img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-}
-
-.product_wrapper:before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: rgb(0 0 0 / 10%);
-  display: block;
-  z-index: 1;
-}
-
-.products_title {
-  font-size: 16px;
-  color: var(--black-color);
-  font-weight: 400;
-}
-
-.products_review {
-  padding: 0;
-  list-style: none;
-  display: flex;
-  align-items: center;
-  margin: 8px 0 14px;
-}
-
-.products_review li svg {
-  width: 15px;
-  height: 15px;
 }
 
 .price {
@@ -556,10 +526,6 @@ nav.navbar {
   text-decoration: line-through;
 }
 
-.products_review li {
-  display: inline-flex;
-}
-
 .products_btn {
   min-width: 100px;
   padding: 10px;
@@ -568,85 +534,39 @@ nav.navbar {
   letter-spacing: normal;
 }
 
-.colorSwatches {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  margin: 15px 0 0;
-}
-
-.colorSwatches span {
-  width: 20px;
-  height: 20px;
-  border-radius: 50px;
-  background: #f5f5f5;
-  display: block;
-  border: 2px solid var(--white-color);
-  outline: 1px solid var(--black-color);
-}
-
-.colorSwatches span.color1 {
-  background-color: var(--blue-100-color);
-}
-
-.colorSwatches span.color2 {
-  background-color: var(--yellow-100-color);
-}
-
-.colorSwatches span.color3 {
-  background-color: var(--pink-100-color);
-}
-
-.colorSwatches span.color4 {
-  background-color: var(--brown-100-color);
-}
-
-.colorSwatches span.color5 {
-  background-color: var(--green-100-color);
-}
-
-.products_review li:nth-child(1) svg path,
-.products_review li:nth-child(2) svg path,
-.products_review li:nth-child(3) svg path {
-  fill: #000 !important;
-}
-
-.TrendingProduct_wrap {
-  border-radius: 20px;
-  overflow: hidden;
-  display: inline-flex;
+.trendingProduct_wrap {
   position: relative;
+  display: inline-flex;
+  height: 500px;
+  width: 100%;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
-.TrendingProduct_content {
-  position: absolute;
-  bottom: 50px;
-  left: 50px;
+.trendingProduct_wrap img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: bottom;
 }
 
-.TrendingProduct_wrap img {
-  filter: grayscale(1);
+.trendingProduct_content {
+  text-align: center;
+  margin: 10px 0 0;
 }
 
-.TrendingProduct_content .subHeading {
-  font-size: 13px;
-  color: var(--white-color);
-  text-transform: uppercase;
-  font-weight: 500;
-}
-
-.TrendingProduct_content h2 {
-  font-size: 36px;
+.trendingProduct_content h2 {
+  font-size: 16px;
   font-weight: 400;
-  color: var(--white-color);
-  margin: 5px 0;
+  color: var(--black-color);
+  margin: 0 0 5px 0;
   text-transform: capitalize;
 }
 
-.TrendingProduct_content a {
+.trendingProduct_content a {
   background: transparent;
   padding: 0;
-  color: var(--white-color);
+  color: var(--black-color);
   font-weight: 500;
   text-decoration: underline;
 }
@@ -863,7 +783,7 @@ footer {
     max-width: 100%;
   }
 
-  .TrendingProduct_outer h2.main_heading {
+  .trendingProduct_outer h2.main_heading {
     font-size: 22px;
     max-width: 100%;
   }
@@ -951,7 +871,7 @@ footer {
     font-size: 14px;
   }
 
-  .TrendingProduct_items {
+  .trendingProduct_items {
     flex: 0 0 calc(50% - 10px);
     max-width: calc(50% - 10px);
   }
@@ -985,21 +905,21 @@ footer {
     padding: 20px 0;
   }
 
-  .TrendingProduct_wrap {
+  .trendingProduct_wrap {
     width: auto;
   }
 
-  .TrendingProduct_items {
+  .trendingProduct_items {
     flex: 0 0 100%;
     max-width: 100%;
   }
 
-  .TrendingProduct_content {
+  .trendingProduct_content {
     bottom: 30px;
     left: 30px;
   }
 
-  .TrendingProduct_content h2 {
+  .trendingProduct_content h2 {
     font-size: 28px;
   }
 }
