create new sections

--- a/css/custom.css
+++ b/css/custom.css
@@ -274,7 +274,7 @@ nav.navbar {
 
 .hero_content {
   position: relative;
-  height: 900px;
+  height: 800px;
   overflow: hidden;
 }
 
@@ -323,7 +323,7 @@ nav.navbar {
   margin: 0;
   line-height: 75px;
   color: var(--white-color);
-  font-weight: 400;
+  font-weight: 800;
 }
 
 .hero_content .subHeading {
@@ -332,7 +332,7 @@ nav.navbar {
   margin: 0;
   line-height: normal;
   color: var(--white-color);
-  font-weight: 400;
+  font-weight: 700;
   display: inline-block;
   margin-bottom: 20px;
 }
@@ -534,6 +534,29 @@ nav.navbar {
   letter-spacing: normal;
 }
 
+.products_review {
+  padding: 0;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  margin: 8px 0 14px;
+}
+
+.products_review li svg {
+  width: 15px;
+  height: 15px;
+}
+
+.products_review li {
+  display: inline-flex;
+}
+
+.products_review li:nth-child(1) svg path,
+.products_review li:nth-child(2) svg path,
+.products_review li:nth-child(3) svg path {
+  fill: #000 !important;
+}
+
 .trendingProduct_wrap {
   position: relative;
   display: inline-flex;
@@ -580,10 +603,17 @@ nav.navbar {
 .testimonial_wrapper {
   border: 2px solid var(--black-100-color);
   border-radius: 5px;
-  width: 30px;
-  height: 30px;
-  padding: 10px;
+  width: 80px;
+  height: 80px;
+  padding: 0;
   margin: 0px auto 30px;
+  overflow: hidden;
+}
+
+.testimonial_wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .testimonial_text {
@@ -620,6 +650,7 @@ footer {
   font-weight: 500;
   color: var(--white-color);
   text-transform: uppercase;
+  margin-bottom: 15px;
 }
 
 .footer_item ul a {
@@ -654,6 +685,11 @@ footer {
   font-size: 14px;
   line-height: 22px;
   padding-right: 50px;
+}
+
+.footer_dis .logo {
+  color: #fff;
+  text-align: left;
 }
 
 .footer_bottom {
