--- a/css/custom.css
+++ b/css/custom.css
@@ -189,8 +189,12 @@ header {
   justify-content: space-between;
 }
 
-.header_content > div {
+.header_content>div {
   flex: 1;
+
+  @media screen and (max-width: 991px) {
+    flex: unset;
+  }
 }
 
 .header_icon {
@@ -238,7 +242,7 @@ nav.navbar {
   font-size: 10px;
 }
 
-.navbar-nav li + li {
+.navbar-nav li+li {
   margin-left: 35px;
 }
 
@@ -276,6 +280,10 @@ nav.navbar {
   position: relative;
   height: 800px;
   overflow: hidden;
+
+  @media screen and (max-width: 767px) {
+    height: 500px;
+  }
 }
 
 .hero_content:before {
@@ -351,6 +359,10 @@ nav.navbar {
   width: 50px;
   overflow: hidden;
   margin: 0 auto;
+
+  @media screen and (max-width: 767px) {
+    width: 40px;
+  }
 }
 
 .furniture_icon ul {
@@ -362,9 +374,14 @@ nav.navbar {
   padding: 40px 10px;
   border-right: 0;
   border-left: 0;
+
+  @media screen and (max-width: 767px) {
+    flex: 25%;
+    padding: 20px 10px;
+  }
 }
 
-.furniture_icon ul li + li {
+.furniture_icon ul li+li {
   border-left: 1px solid #d9d9d9;
 }
 
@@ -392,6 +409,7 @@ nav.navbar {
   flex: 0 0 calc(33.3% - 13px);
   max-width: calc(33.3% - 13px);
 }
+
 /*  */
 
 /* Feature */
@@ -436,7 +454,7 @@ nav.navbar {
   grid-area: 2 / 2 / 3 / 3;
 }
 
-.products_list .slick-slide > div,
+.products_list .slick-slide>div,
 .testimonial_list .testimonial_item {
   margin: 10px;
 }
@@ -455,6 +473,10 @@ nav.navbar {
   justify-content: flex-end;
   filter: grayscale(1);
   transition: all 0.5s ease;
+
+  @media screen and (max-width: 767px) {
+    min-height: 250px;
+  }
 }
 
 .feature_items:hover .feature_content {
@@ -564,6 +586,10 @@ nav.navbar {
   width: 100%;
   border-radius: 10px;
   overflow: hidden;
+
+  @media screen and (max-width: 767px) {
+    height: 250px;
+  }
 }
 
 .trendingProduct_wrap img {
@@ -638,6 +664,10 @@ footer {
   background: #333;
   padding-block: 60px 0;
   margin-top: 100px;
+
+  @media screen and (max-width: 767px) {
+    margin-top: 40px;
+  }
 }
 
 .footer_item ul {
@@ -676,7 +706,7 @@ footer {
   width: 100%;
 }
 
-.footer_item ul li + li {
+.footer_item ul li+li {
   margin-top: 12px;
 }
 
@@ -716,13 +746,14 @@ footer {
   header {
     position: relative;
     backdrop-filter: unset;
-    background-color: #000000;
+    background-color: #ffffff;
     padding: 15px 0;
   }
 
   .header_content nav {
     display: none;
   }
+
   .mobile_nav {
     display: flex;
     align-items: center;
@@ -749,7 +780,7 @@ footer {
   .toggle_icon span {
     width: 100%;
     height: 2px;
-    background: #fff;
+    background: #000000;
     display: inline-block;
     transition: all 0.5s ease;
   }
@@ -778,7 +809,7 @@ footer {
     flex-direction: column;
     position: absolute;
     left: -100%;
-    background: rgb(0 0 0 / 60%);
+    background: rgb(189 189 189 / 60%);
     padding: 0;
     min-width: 300px;
     align-items: flex-start;
@@ -792,7 +823,7 @@ footer {
     left: 0;
   }
 
-  .navbar-nav li + li {
+  .navbar-nav li+li {
     margin-left: 0;
   }
 
@@ -897,10 +928,11 @@ footer {
 
   .hero_content h1 {
     font-size: 45px;
+    line-height: 50px;
   }
 
   .testimonial_item {
-    padding: 30px;
+    padding: 20px;
   }
 
   .testimonial_person {
@@ -941,10 +973,6 @@ footer {
     padding: 20px 0;
   }
 
-  .trendingProduct_wrap {
-    width: auto;
-  }
-
   .trendingProduct_items {
     flex: 0 0 100%;
     max-width: 100%;
@@ -955,7 +983,4 @@ footer {
     left: 30px;
   }
 
-  .trendingProduct_content h2 {
-    font-size: 28px;
-  }
 }
