--- a/css/custom.css
+++ b/css/custom.css
@@ -1,15 +1,15 @@
 :root {
-  --white-color: #ffffff;
-  --black-color: #000000cc;
+  --white-color: #fff;
+  --black-color: #000 cc;
   --bg-color: #fafafa;
   --grey-color: #808080;
   --red-color: #dd3327;
-  --blue-100-color: rgb(63, 138, 209);
-  --yellow-100-color: rgb(245, 245, 220);
-  --pink-100-color: rgb(252, 209, 219);
-  --brown-100-color: rgb(226, 194, 143);
-  --green-100-color: rgb(122, 189, 181);
-  --black-100-color: #333333;
+  --blue-100-color: #3f8ad1;
+  --yellow-100-color: #f5f5dc;
+  --pink-100-color: #fcd1db;
+  --brown-100-color: #e2c28f;
+  --green-100-color: #7abdb5;
+  --black-100-color: #333;
   --poppins_font: "Poppins", sans-serif;
   --Montserrat_font: "Montserrat", sans-serif;
 }
@@ -31,6 +31,7 @@ body {
   margin: 0 auto;
   padding: 0 20px;
 }
+
 
 h1,
 h2,
@@ -115,16 +116,15 @@ ul {
 }
 
 .slick-dots li button:before {
-  color: #ffffff;
+  color: #fff;
 }
 
 .slick-dots li.slick-active button:before {
   opacity: 0.75;
-  color: #ffffff;
+  color: #fff;
 }
 
-/*  */
-
+/* */
 .main_heading {
   font-size: 48px;
   font-weight: 600;
@@ -157,13 +157,12 @@ ul {
 }
 
 /* Header */
-
 header {
   position: relative;
   top: 0;
   width: 100%;
   z-index: 3;
-  background-color: #ffffff;
+  background-color: #fff;
 }
 
 .nav_open {
@@ -189,8 +188,14 @@ header {
   justify-content: space-between;
 }
 
-.header_content > div {
+.header_content>div {
   flex: 1;
+}
+
+@media screen and (max-width: 991px) {
+  .header_content>div {
+    flex: unset;
+  }
 }
 
 .header_icon {
@@ -238,7 +243,7 @@ nav.navbar {
   font-size: 10px;
 }
 
-.navbar-nav li + li {
+.navbar-nav li+li {
   margin-left: 35px;
 }
 
@@ -271,11 +276,16 @@ nav.navbar {
 }
 
 /* Hero Section */
-
 .hero_content {
   position: relative;
   height: 800px;
   overflow: hidden;
+}
+
+@media screen and (max-width: 767px) {
+  .hero_content {
+    height: 500px;
+  }
 }
 
 .hero_content:before {
@@ -284,7 +294,7 @@ nav.navbar {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgb(0 0 0 / 10%);
+  background: #000;
 }
 
 .header_icon svg {
@@ -304,7 +314,7 @@ nav.navbar {
   top: 0;
   width: 100%;
   height: 100%;
-  background: rgb(0 0 0 / 60%);
+  background: #000;
   z-index: 0;
 }
 
@@ -346,11 +356,16 @@ nav.navbar {
 }
 
 /* furniture */
-
 .furniture_wrap {
   width: 50px;
   overflow: hidden;
   margin: 0 auto;
+}
+
+@media screen and (max-width: 767px) {
+  .furniture_wrap {
+    width: 40px;
+  }
 }
 
 .furniture_icon ul {
@@ -364,7 +379,14 @@ nav.navbar {
   border-left: 0;
 }
 
-.furniture_icon ul li + li {
+@media screen and (max-width: 767px) {
+  .furniture_icon ul li {
+    flex: 25%;
+    padding: 20px 10px;
+  }
+}
+
+.furniture_icon ul li+li {
   border-left: 1px solid #d9d9d9;
 }
 
@@ -380,10 +402,8 @@ nav.navbar {
   text-transform: capitalize;
 }
 
-/*  */
-
-/* trending  */
-
+/* */
+/* trending */
 .trendingProduct_list {
   justify-content: center;
 }
@@ -392,10 +412,9 @@ nav.navbar {
   flex: 0 0 calc(33.3% - 13px);
   max-width: calc(33.3% - 13px);
 }
-/*  */
 
+/* */
 /* Feature */
-
 .feature_list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -421,22 +440,22 @@ nav.navbar {
 }
 
 .feature_items1 {
-  grid-area: 1 / 1 / 3 / 2;
+  grid-area: 0.1666666667;
 }
 
 .feature_items2 {
-  grid-area: 1 / 2 / 2 / 3;
+  grid-area: 0.0833333333;
 }
 
 .feature_items3 {
-  grid-area: 1 / 3 / 3 / 4;
+  grid-area: 0.0277777778;
 }
 
 .feature_items4 {
-  grid-area: 2 / 2 / 3 / 3;
+  grid-area: 0.1111111111;
 }
 
-.products_list .slick-slide > div,
+.products_list .slick-slide>div,
 .testimonial_list .testimonial_item {
   margin: 10px;
 }
@@ -455,6 +474,12 @@ nav.navbar {
   justify-content: flex-end;
   filter: grayscale(1);
   transition: all 0.5s ease;
+}
+
+@media screen and (max-width: 767px) {
+  .feature_content {
+    min-height: 250px;
+  }
 }
 
 .feature_items:hover .feature_content {
@@ -566,6 +591,12 @@ nav.navbar {
   overflow: hidden;
 }
 
+@media screen and (max-width: 767px) {
+  .trendingProduct_wrap {
+    height: 250px;
+  }
+}
+
 .trendingProduct_wrap img {
   width: 100%;
   height: 100%;
@@ -640,6 +671,12 @@ footer {
   margin-top: 100px;
 }
 
+@media screen and (max-width: 767px) {
+  footer {
+    margin-top: 40px;
+  }
+}
+
 .footer_item ul {
   list-style: none;
   padding: 0;
@@ -676,7 +713,7 @@ footer {
   width: 100%;
 }
 
-.footer_item ul li + li {
+.footer_item ul li+li {
   margin-top: 12px;
 }
 
@@ -695,7 +732,7 @@ footer {
 .footer_bottom {
   text-align: center;
   margin-top: 50px;
-  border-top: 1px solid #ffffff1c;
+  border-top: 1px solid #fff 1c;
 }
 
 .footer_bottom p {
@@ -716,13 +753,14 @@ footer {
   header {
     position: relative;
     backdrop-filter: unset;
-    background-color: #000000;
+    background-color: #fff;
     padding: 15px 0;
   }
 
   .header_content nav {
     display: none;
   }
+
   .mobile_nav {
     display: flex;
     align-items: center;
@@ -749,7 +787,7 @@ footer {
   .toggle_icon span {
     width: 100%;
     height: 2px;
-    background: #fff;
+    background: #000;
     display: inline-block;
     transition: all 0.5s ease;
   }
@@ -778,7 +816,7 @@ footer {
     flex-direction: column;
     position: absolute;
     left: -100%;
-    background: rgb(0 0 0 / 60%);
+    background: #000;
     padding: 0;
     min-width: 300px;
     align-items: flex-start;
@@ -792,14 +830,14 @@ footer {
     left: 0;
   }
 
-  .navbar-nav li + li {
+  .navbar-nav li+li {
     margin-left: 0;
   }
 
   .nav-link {
     padding: 20px;
     display: block;
-    border-bottom: 1px solid rgb(255 255 255 / 10%);
+    border-bottom: 1px solid #000;
   }
 
   .mobile_nav ul li.nav-item {
@@ -897,10 +935,11 @@ footer {
 
   .hero_content h1 {
     font-size: 45px;
+    line-height: 50px;
   }
 
   .testimonial_item {
-    padding: 30px;
+    padding: 20px;
   }
 
   .testimonial_person {
@@ -941,10 +980,6 @@ footer {
     padding: 20px 0;
   }
 
-  .trendingProduct_wrap {
-    width: auto;
-  }
-
   .trendingProduct_items {
     flex: 0 0 100%;
     max-width: 100%;
@@ -953,9 +988,5 @@ footer {
   .trendingProduct_content {
     bottom: 30px;
     left: 30px;
-  }
-
-  .trendingProduct_content h2 {
-    font-size: 28px;
   }
 }
